--- a/package.json
+++ b/package.json
@@ -15,5 +15,23 @@
   "bugs": {
     "url": "https://github.com/theNvN/my-page/issues"
   },
-  "homepage": "https://github.com/theNvN/my-page#readme"
+  "homepage": "https://github.com/theNvN/my-page#readme",
+  "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "babel-loader": "^8.1.0",
+    "eslint": "^7.7.0",
+    "eslint-loader": "^4.0.2",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "sass-loader": "^10.0.1",
+    "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^4.1.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.11.0"
+  }
 }
