--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My Personal Page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,12 +18,15 @@
   "homepage": "https://github.com/theNvN/my-page#readme",
   "devDependencies": {
     "@babel/core": "^7.11.4",
+    "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
+    "css-loader": "^4.2.2",
     "eslint": "^7.7.0",
     "eslint-loader": "^4.0.2",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^10.0.1",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^4.1.0",
@@ -32,6 +35,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.11.0"
+    "@babel/preset-env": "^7.11.0",
+    "sass": "^1.26.10"
   }
 }
