--- a/package.json
+++ b/package.json
@@ -37,5 +37,7 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "animejs": "^3.2.0"
+  }
 }
