--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^7.7.0",
     "eslint-loader": "^4.0.2",
     "html-webpack-plugin": "^4.3.0",
+    "clean-webpack-plugin": "^3.0.0",
     "mini-css-extract-plugin": "^0.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
