--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@babel/preset-env": "^7.11.0",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.1.0",
     "css-loader": "^4.2.2",
     "eslint": "^7.7.0",
     "eslint-loader": "^4.0.2",
     "html-webpack-plugin": "^4.3.0",
-    "clean-webpack-plugin": "^3.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^0.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
