--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My Personal Page",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --mode production",
     "dev": "webpack-dev-server"
   },
   "repository": {
